--- a/index.html
+++ b/index.html
@@ -37,6 +37,43 @@
         </ul>
       </div>
     </nav>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-fluid" src="imgs/hand2.png">
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <img src="imgs/milk.png" class="img-fluid">
+        </div>
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png">
+              <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
