--- a/index.html
+++ b/index.html
@@ -58,15 +58,29 @@
     </section>
 
     <section class="container-fluid px-0">
-      <div class="row align-items-center">
-        <div class="col-md-6">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
           <img src="imgs/milk.png" class="img-fluid">
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
-            <div class="col-10 col-lg-8">
+            <div class="col-10 col-lg-8 blurb">
               <h2>MUSEUM OF CANDY</h2>
-              <img src="imgs/lolli_icon.png">
+              <img src="imgs/lolli_icon.png" class="d-none d-lg-inline">
+              <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="imgs/milk.png" class="img-fluid">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" class="d-none d-lg-inline">
               <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
